// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2 emotion-3"
    >
      Title Block
    </h1>
    <p
      class="MuiTypography-root MuiTypography-h6 emotion-4"
    >
      Lead
    </p>
  </div>
</DocumentFragment>
`;

exports[`Title Block should render WithoutLead 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 emotion-2 emotion-3"
    >
      Title Block
    </h1>
  </div>
</DocumentFragment>
`;
